--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Game Time</title>
 </head>
 <body>
-  <canvas id="snake-game" width="400" height="300"></canvas>
+  <canvas id="snake-game" width="400" height="300" style="border: 2px solid black;"></canvas>
   <script src="main.bundle.js"></script>
 </body>
 </html>
