Remove score section from UI.

--- a/index.html
+++ b/index.html
@@ -10,14 +10,10 @@
 </head>
 <body>
   <h1>🐍 Snake on a Plane 🐍</h1>
-  <div class="score-board">
-    <h2>Score: </h2>
-    <h3 class="total-points">43</h3>
-  </div>
-  <div class="container">
+  <section class="message">Here's your message!</section>
+  <section class="container">
     <canvas id="snake-game" width="600" height="400" style="border: 2px solid black;"></canvas>
-  </div>
-  <div class="message">Here's your message!</div>
+  </section>
   <section class="position-of-buttons">
     <button type="button" class="start-button">START</button>
     <button type="button" class="reset-button">RESET</button>
