still working on ending game

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1>🐍 Snake on a Plane 🐍</h1>
-  <section class="message">Here's your message!</section>
+  <section class="message"></section>
   <section class="container">
     <canvas id="snake-game" width="600" height="400" style="border: 2px solid black;"></canvas>
   </section>
