--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
   <section class="container">
     <canvas id="snake-game" width="600" height="400" style="border: 2px solid black;"></canvas>
   </section>
-  <section class="position-of-buttons">
-    <button type="button" class="start-button">START</button>
-    <button type="button" class="reset-button">RESET</button>
+  <section class="start">
+    Click inside the plane then press any arrow to start!
   </section>
   <script src="main.bundle.js"></script>
 </body>
