--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
 </head>
 <body>
   <h1>🐍 Snake on a Plane 🐍</h1>
-  <section class="message"></section>
+  <section class="message">Click inside the plane then press any arrow to start!</section>
   <section class="container">
     <canvas id="snake-game" width="600" height="400" style="border: 2px solid black;"></canvas>
-  </section>
-  <section class="start">
-    Click inside the plane then press any arrow to start!
   </section>
   <script src="main.bundle.js"></script>
 </body>
