--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
-  <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Rokkitt:400,700" rel="stylesheet">
   <meta name="viewport" content="width=device-width">
   <title>Snake</title>
 </head>
